[project]
name = "pybuoy"
version = "0.5.9"
description = "Python wrapper for NOAA and NDBC REST web services."
authors = [{ name = "Kyle J. Burda", email = "kylejbdev@gmail.com" }]
requires-python = ">=3.11"
readme = "README.rst"
license = "GPL-3.0-or-later"
keywords = [
    "NDBC",
    "NOAA",
    "api",
    "buoy",
    "weather",
    "wrapper",
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "lxml>=6.0,<7.0",
    "requests>=2.32.4,<3",
]
documentation = "https://pybuoy.readthedocs.io"
include = ["LICENSE"]

[project.urls]
"Source Code" = "https://github.com/clairBuoyant/pybuoy"
"Bug Tracker" = "https://github.com/clairBuoyant/pybuoy/issues"

[dependency-groups]
dev = [
    "ruff>=0.12.8,<0.13",
    "mypy>=1.17.1,<2",
    "pre-commit>=4.3.0,<5",
    "pytest>=8.4.1,<9",
    "types-requests>=2.32.4,<3",
]
docs = [
    "furo>=2025.7.19",
    "Sphinx>=8.2.3,<9",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
    ".git",
    ".github",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    "dist",
    "htmlcov",
]
line-length = 88
target-version = "py311"

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
exclude = '''
(
  /(
    \.git
    | dist
    | docs/source/conf.py
    | .venv
  )/
)
'''

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
