[project]
name = "pybuoy"
version = "0.5.10"
description = "Python wrapper for NOAA and NDBC REST web services."
authors = [{ name = "Kyle J. Burda", email = "kylejbdev@gmail.com" }]
requires-python = ">=3.12"
readme = "README.rst"
license = "GPL-3.0-or-later"
keywords = ["NDBC", "NOAA", "api", "buoy", "weather", "wrapper"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["lxml>=6.1,<7.0", "requests>=2.33.1,<3"]
documentation = "https://pybuoy.readthedocs.io"
include = ["LICENSE"]

[project.urls]
"Source Code" = "https://github.com/clairBuoyant/pybuoy"
"Bug Tracker" = "https://github.com/clairBuoyant/pybuoy/issues"

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "mypy>=1.20.2,<2",
    "pre-commit>=4.6.0,<5",
    "pytest>=9.0.3,<10",
    "types-requests>=2.33.0,<3",
]
docs = ["furo>=2025.12.19", "Sphinx>=9.1.0,<10"]

[tool.uv]
default-groups = ["dev", "docs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
    ".git",
    ".github",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    "dist",
    "htmlcov",
]
line-length = 88
target-version = "py311"

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
exclude = '''
(
  /(
    \.git
    | dist
    | docs/source/conf.py
    | .venv
  )/
)
'''

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
